[package]
name = "compio_dir_scan"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = { version = "1", features = ["mmap", "digest", "rayon", "serde"] }
compio = { version = "0", features = ["all"] }
crossfire = { version = "3", features = ["tokio"] }
jwalk = "0"
tokio = { version = "1", features = ["full"] }
