[package]
name = "compio_dir_scan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = { version = "1", features = ["mmap", "digest", "rayon", "serde"] }
compio = { version = "0", features = ["all"] }
crossfire = { version = "3", features = ["tokio"] }
gstreamer = "0"
gstreamer-app = "0"
gstreamer-video = "0"
jwalk = "0"
tokio = { version = "1", features = ["full"] }
